for v13: sheet header align fix
Align sheet header items to fit 100% of the sheet width

--- a/styles/simple.css
+++ b/styles/simple.css
@@ -92,6 +92,7 @@
   display: webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
